--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,49 +1,13 @@
----
-version: 2
-jobs:
-  build:
-    docker:
-      - image: googleapis/git
-    steps:
-      - checkout
-      - run:
-          command: |
-            if [ "$CIRCLE_BRANCH" == "master" ]; then
-              git remote add private https://googleapis-publisher:${GITHUB_TOKEN}@github.com/googleapis/googleapis-private.git
-              git push private HEAD:master
-            fi
-    working_directory: /var/code/googleapis/
-  smoke-all:
-    docker:
-      - image: googleapis/artman:latest
-    steps:
-      - checkout
-      - run:
-          name: Run smoke tests
-          command: |
-            mkdir /tmp/reports
-            export RUNNING_IN_ARTMAN_DOCKER=True
-            smoketest_artman.py --root-dir=/var/code/googleapis/ --log=/tmp/reports/smoketest.log
-      - run:
-          name: Archive artifacts
-          command: |
-            mkdir /var/code/googleapis-tgz
-            tar cfz /var/code/googleapis-tgz/googleapis.tar.gz /var/code/googleapis
-          when: always
-      - store_test_results:
-          path: /tmp/reports
-      - store_artifacts:
-          path: /tmp/reports
-      - store_artifacts:
-          path: /var/code/googleapis-tgz
-    working_directory: /var/code/googleapis/
-
+# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
+version: 2.1
+# Use a package of configuration called an orb.
+orbs:
+  # Declare a dependency on the welcome-orb
+  welcome: circleci/welcome-orb@0.4.1
+# Orchestrate or schedule a set of jobs
 workflows:
-  version: 2
-  smoketests:
+  # Name the workflow "welcome"
+  welcome:
+    # Run the welcome/run job in its own container
     jobs:
-      - smoke-all:
-          filters:
-            branches:
-              only:
-                - master
+      - welcome/run
